<resources>
    <string name="app_name">UwaBey</string>
    <string name="how_it_works">How it works     |</string>
    <string name="let_s_chat">Let\'s Chat</string>
    <string name="how_it2">|    Language</string>
    <string name="francais">Francais</string>
    <string name="Home">Home</string>
    <string name="ct">Categories</string>
    <string name="orders">Orders</string>
    <string name="account">Account</string>
    <string name="favorite">Favorites</string>
    <string name="veillez_choisir_votre_langue">Veillez choisir votre langue</string>
    <string name="how_can_we_help_you">How can we help You</string>
</resources>
