<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">



    <item
        android:id="@+id/cart"
        android:iconTint="@color/colorPrimary"
        android:icon="@drawable/ic_next_week_black_24dp"
        android:title="@string/orders"
        tools:targetApi="o" />

    <item
        android:id="@+id/fvorite"
        android:iconTint="@color/colorPrimary"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/favorite"
        tools:targetApi="o" />

    <item
        android:id="@+id/Home"
        android:iconTint="@color/colorPrimary"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/Home"
        tools:targetApi="o" />

    <item
        android:id="@+id/account"
        android:iconTint="@color/colorPrimary"
        android:icon="@drawable/ic_person_outline_black_24dp"
        android:title="@string/account"
        tools:targetApi="o" />

    <item
        android:id="@+id/ctogiers"
        android:iconTint="@color/colorPrimary"
        android:icon="@drawable/ic_view_module_black_24dp"
        android:title="@string/ct"
        tools:targetApi="o" />

</menu>