<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyCart">

    <include
        android:id="@+id/lyout_top"
        android:layout_alignParentTop="true"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        layout="@layout/lyout_top" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_below="@+id/lyout_top"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/linCard2"
            android:orientation="vertical"
            android:visibility="visible"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="On My Cart"
                android:textColor="@color/colorPrimary"
                android:textSize="26sp"
                android:textStyle="bold"
                android:layout_marginTop="2dp"
                android:fontFamily="serif"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:id="@+id/txtTrending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerSpearItem"
                android:layout_marginTop="14dp"
                android:scrollbarStyle="outsideOverlay"
                android:scrollbars="vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:scrollbarThumbHorizontal="@color/colorPrimaryDark"
                android:scrollbarFadeDuration="7500"
                android:scrollbarSize="3dp"
                android:layout_below="@+id/txtTrending"
                android:layout_width="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_height="wrap_content" />

            <!--<Button-->
            <!--android:background="@drawable/cerclebackgroundpink"-->
            <!--android:text="More"-->
            <!--android:textColor="@color/colorPrimaryDark"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:onClick="toSpareAct"-->
            <!--android:fontFamily="sans-serif-thin"-->
            <!--android:textStyle="bold"-->
            <!--android:layout_gravity="end"-->
            <!--android:layout_marginTop="8dp"-->
            <!--android:layout_alignParentStart="true"-->
            <!--android:layout_below="@+id/recyclerSpearItem"-->
            <!--android:textAllCaps="false"-->
            <!--android:layout_marginStart="6dp"-->
            <!--android:layout_marginBottom="16dp"-->
            <!--android:layout_height="wrap_content" />-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_below="@+id/recyclerSpearItem"
                android:layout_marginTop="16dp"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:id="@+id/rel_tot"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="Total"
                        android:textStyle="bold"
                        android:textSize="17sp"
                        android:fontFamily="serif"
                        android:textColor="#111"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="serif"
                        android:textSize="17sp"
                        android:textColor="@color/colorLinks"
                        android:text="$456.00" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_margin="16dp"
                    android:layout_below="@+id/rel_tot"
                    android:layout_height="wrap_content">

                    <Button
                        android:layout_marginTop="12dp"
                        android:layout_width="match_parent"
                        android:text="Check out"
                        android:textAllCaps="false"
                        android:id="@+id/btnCheckout"
                        android:textSize="16sp"
                        android:textColor="@color/colorLinks"
                        android:background="@drawable/rounded_rect"
                        android:layout_height="wrap_content" />

                    <Button
                        android:layout_below="@+id/btnCheckout"
                        android:layout_marginTop="16dp"
                        android:layout_width="match_parent"
                        android:text="Continue shopping"
                        android:textAllCaps="false"
                        android:textSize="16sp"
                        android:textColor="@color/colorPrimaryDark"
                        android:background="@drawable/cerclerectngle"
                        android:layout_height="wrap_content" />

                </RelativeLayout>
            </RelativeLayout>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

<!--    <include-->
<!--        android:id="@+id/lyout_bottom"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_width="match_parent"-->
<!--        android:visibility="gone"-->
<!--        layout="@layout/lyout_drwer" />-->

    <com.gauravk.bubblenavigation.BubbleNavigationLinearView
        android:id="@+id/bot_navigation_Lin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryGry"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:elevation="4dp"
        android:padding="6dp"
        android:weightSum="5"
        tools:targetApi="lollipop">

        <TextView
            android:id="@+id/textBUbble"
            android:background="@drawable/edittext"
            android:padding="4dp"
            android:text=" here is it "
            android:textStyle="normal"
            android:fontFamily="serif"
            android:visibility="gone"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/c_myccout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:bt_active="false"
            android:fontFamily="serif"
            android:layout_gravity="start"
            app:bt_badgeTextSize="10sp"
            android:gravity="start"
            app:bt_colorInactive="@color/colorPrimary"
            app:bt_icon="@drawable/ic_person_outline_black_24dp"
            app:bt_shape="@drawable/edittext"
            app:bt_padding="5dp"
            app:bt_title="@string/account"
            app:bt_colorActive="@color/colorLinks2"
            app:bt_titlePadding="0dp" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/myorders"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:bt_badgeTextSize="11sp"
            app:bt_active="true"
            app:bt_colorActive="@color/colorLinks3"
            app:bt_titlePadding="0dp"
            android:fontFamily="serif"
            app:bt_shape="@drawable/edittext"
            app:bt_padding="5dp"
            app:bt_colorInactive="@color/colorPrimary"
            app:bt_icon="@drawable/ic_next_week_black_24dp"
            app:bt_title="@string/orders" />
        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/myhome"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:layout_height="wrap_content"
            app:bt_badgeTextSize="10sp"
            app:bt_active="false"
            app:bt_colorInactive="@color/colorPrimary"
            app:bt_icon="@drawable/ic_home_black_24dp"
            app:bt_shape="@drawable/edittext"
            app:bt_padding="5dp"
            app:bt_title="@string/Home"
            app:bt_colorActive="@color/colorLinks"
            app:bt_titlePadding="0dp"  />


        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/myct"
            android:layout_width="0dp"
            app:bt_badgeTextSize="8sp"
            android:layout_weight="0"
            android:layout_height="wrap_content"
            app:bt_active="false"
            android:visibility="gone"
            app:bt_colorActive="@color/colorLinks1"
            app:bt_colorInactive="@color/colorPrimary"
            app:bt_icon="@drawable/ic_favorite_black_24dp"
            app:bt_title="@string/favorite"
            app:bt_shape="@drawable/edittext"
            app:bt_padding="5dp"
            app:bt_titlePadding="0dp" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/c_item_rest"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:bt_active="false"
            android:fontFamily="serif"
            app:bt_badgeTextSize="9sp"
            app:bt_colorActive="@color/colorLinks1"
            app:bt_colorInactive="@color/colorPrimary"
            app:bt_icon="@drawable/ic_view_module_black_24dp"
            app:bt_shape="@drawable/edittext"
            app:bt_padding="4dp"
            app:bt_title="@string/ct"
            app:bt_titlePadding="-1dp" />
        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/c_search"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:bt_active="false"
            android:fontFamily="serif"
            app:bt_badgeTextSize="9sp"
            app:bt_colorActive="@color/colorLinks5"
            app:bt_colorInactive="@color/colorPrimary"
            app:bt_icon="@drawable/ic_search_black_24dp"
            app:bt_shape="@drawable/edittext"
            app:bt_padding="4dp"
            app:bt_title="@string/ct"
            app:bt_titlePadding="-1dp" />
        <!-- Add more child items here - max upto 5 -->

    </com.gauravk.bubblenavigation.BubbleNavigationLinearView>

</RelativeLayout>
